# dbgpts

agents/summarizer-agent-example/: pyproject.toml
agents/summarizer-agent-example/summarizer_agent_example/: __init__.py  action.py
operators/awel-simple-operator/: pyproject.toml
resources/jina-web-reader/: pyproject.toml
resources/simple-calculator-example/: pyproject.toml
workflow/all-in-one-entrance/: pyproject.toml
workflow/all-in-one-entrance/all_in_one_entrance/: __init__.py  chat_database.py  chat_knowledge.py
workflow/andrewyng-translation-agent/: pyproject.toml
workflow/awel-flow-example-chat/: pyproject.toml
workflow/awel-flow-rag-chat-example/: pyproject.toml
workflow/awel-flow-rag-summary-example/: pyproject.toml
workflow/awel-flow-simple-streaming-chat/: pyproject.toml
workflow/awel-flow-web-info-search/: pyproject.toml
workflow/chat-data-awel-flow-template/: MANIFEST.in  dbgpts.toml  pyproject.toml
workflow/db-expert-assisant/: pyproject.toml
workflow/financial-report-knowledge-factory/: pyproject.toml
workflow/financial-robot-app/: pyproject.toml
workflow/financial-robot-app/financial_robot_app/: chat_database.py  common.py
workflow/rag-save-url-to-vstore/: pyproject.toml
workflow/rag-url-knowledge-example/: pyproject.toml
