[project]
name = "summarizer-agent-example"
version = "0.1.2"
description = ""
authors = [
    { name = "Fangyin Cheng", email = "staneyffer@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "dbgpt[agent]",
]

[tool.hatch.build.targets.wheel]
packages = ["summarizer_agent_example"]