[project]
name = "awel-simple-operator"
version = "0.1.1"
description = ""
authors = [
    { name = "Fangyin Cheng", email = "staneyffer@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "dbgpt",
]

[tool.hatch.build.targets.wheel]
packages = ["awel_simple_operator"]
