[project]
name = "jina-web-reader"
version = "0.1.0"
description = "Convert any URL to an LLM-friendly input with a simple prefix https://r.jina.ai/"
authors = [
    { name = "Fangyin Cheng", email = "staneyffer@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "dbgpt[agent]",
]

[tool.hatch.build.targets.wheel]
packages = ["jina_web_reader"]
