[project]
name = "awel-flow-rag-chat-example"
version = "0.1.0"
description = ""
authors = [
    { name = "aries_ckt", email = "916701291@qq.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "dbgpt",
]

[tool.hatch.build.targets.wheel]
packages = ["awel_flow_rag_chat_example"]
