[project]
name = "awel-flow-web-info-search"
version = "0.1.0"
description = "A simple ai info search flow."
authors = [
    { name = "Henry Yang ", email = "yhjun1026@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "dbgpt",
]

[tool.hatch.build.targets.wheel]
packages = ["awel_flow_web_info_search"]