[project]
name = "db-expert-assisant"
version = "0.1.0"
description = "A db expert assisant flow."
authors = [
    { name = "Henry Yang ", email = "yhjun1026@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "dbgpt",
]

[tool.hatch.build.targets.wheel]
packages = ["db_expert_assisant"]

