[project]
name = "financial-report-knowledge-factory"
version = "0.1.0"
description = "A pipline to process financial report knowledge"
authors = [
    { name = "aries_ckt", email = "916701291@qq.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "dbgpt",
]

[tool.hatch.build.targets.wheel]
packages = ["financial_report_knowledge_factory"]