[project]
name = "financial-robot-app"
version = "0.1.0"
description = "Financial Report chat robot"
authors = [
    { name = "aries_ckt", email = "916701291@qq.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "dbgpt",
    "financial-report-knowledge-factory"
]

[tool.uv.sources]
financial-report-knowledge-factory= { path = "../financial-report-knowledge-factory"}

[tool.hatch.build.targets.wheel]
packages = ["financial_robot_app"]