[project]
name = "rag-save-url-to-vstore"
version = "0.1.0"
description = "Parse the web page in the URL and load it into the vector store."
authors = [
    { name = "Fangyin Cheng", email = "staneyffer@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "dbgpt",
]

[tool.hatch.build.targets.wheel]
packages = ["rag_save_url_to_vstore"]
