[project]
name = "rag-url-knowledge-example"
version = "0.1.0"
description = "A complete example of RAG based on URL knowledge. Please install the workflow to import knowledge before using it: `dbgpt app install rag-save-url-to-vstore`"
authors = [
    { name = "Fangyin Cheng", email = "staneyffer@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "dbgpt",
]

[tool.hatch.build.targets.wheel]
packages = ["rag_url_knowledge_example"]